# ResearchOps

./: .editorconfig  .eslintignore  .gitattributes  .gitignore  .gitmodules  .pa11yci.json  .prettierignore  .prettierrc.json  AGENTS.md  README.md  RECENT_LEARNINGS.md  _redirects  agent-evidence.yaml  branch-protection-evidence.yaml  build.sh  configuration-evidence.yaml  conformance-matrix.yaml  cucumber.mjs  deployment-toolchain.yaml  eslint.config.js  gap-register.yaml  github-settings.yaml  harm-register.yaml  lighthouserc.json  lychee.toml  makefile  package-lock.json  package.json  playwright.config.js  prettier.config.mjs  release-evidence.yaml  release-provenance-policy.yaml  researchops_experience_implementation_plan_v2.html  security-audit-policy.json  security-audit-triage.yaml  tmp-consent-route-note.txt  tmp-token-test.txt  visual-walkthrough.config.mjs  visual-walkthrough.operational-fixtures.mjs  visual-walkthrough.participant-consent-fixtures.mjs  (+5 more)
.agent-operating-model/: README.md  behavioural-evals.json  bootstrap-checklist.md  bundle-registry.json  bundle-registry.schema.json  github-mutation-policy.md  orchestration.xml  pr-queue.md  precedence-policy.md  selection-rules.json  task-signal-catalog.json  trace-layers.md  trace-policy.md
.agent-operating-model/bundles/github/examples/eval-outputs/instantiate-multi-language-repo-pass/: CONTRIBUTING.md  README.md  RECENT_LEARNINGS.md  SECURITY.md  agent-evidence.yaml  conformance-matrix.yaml  gap-register.yaml  github-settings.yaml  package.json  pyproject.toml  test-commands.yaml
.agent-operating-model/bundles/github/examples/eval-outputs/instantiate-multi-language-repo-pass/.github/: CODEOWNERS
.agent-operating-model/bundles/github/examples/eval-outputs/instantiate-multi-language-repo-pass/.github/workflows/: ci-conformance.yml  ci-docs-quality.yml  ci-node.yml  ci-python.yml  codeql.yml  dependency-review.yml
.agent-operating-model/bundles/github/examples/eval-outputs/instantiate-multi-language-repo-pass/docs/: README.md
.agent-operating-model/bundles/github/examples/eval-outputs/instantiate-multi-language-repo-pass/templates/: README.md
.agent-operating-model/bundles/github/examples/eval-outputs/instantiate-multi-language-repo-pass/test/: example.test.mjs
.agent-operating-model/bundles/github/examples/eval-outputs/instantiate-multi-language-repo-pass/tests/: test_fixture.py  test_python_fixture.py
.agent-operating-model/bundles/github/examples/fixtures/live-gate/high-assurance-pass/repo/: CONTRIBUTING.md  README.md  RECENT_LEARNINGS.md  SECURITY.md  accessibility-evidence.yaml  agent-evidence.yaml  attestation.json  conformance-matrix.yaml  gap-register.yaml  github-settings.yaml  package.json  performance-budget.yaml  performance-results.yaml  pyproject.toml  sbom.json  sigstore-bundle.json  test-commands.yaml  trusted-attestation-verification.json  workflow-action-lock.yaml
.agent-operating-model/bundles/github/examples/fixtures/live-gate/high-assurance-pass/repo/.github/: CODEOWNERS
.agent-operating-model/bundles/github/examples/fixtures/live-gate/high-assurance-pass/repo/.github/workflows/: ci-conformance.yml  ci-docs-quality.yml  ci-hardened.yml  ci-node.yml  ci-python.yml  codeql.yml  dependency-review.yml
.agent-operating-model/bundles/github/examples/fixtures/live-gate/high-assurance-pass/repo/docs/: README.md
.agent-operating-model/bundles/github/examples/fixtures/live-gate/high-assurance-pass/repo/results/: axe.json  lighthouse.json  pa11y.json
.agent-operating-model/bundles/github/examples/fixtures/live-gate/high-assurance-pass/repo/templates/: README.md
.agent-operating-model/bundles/github/examples/fixtures/repositories/multilang-empty/: README.md  package.json  pyproject.toml
.agent-operating-model/bundles/github/examples/fixtures/repositories/python-empty/: README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
config/: reporting-review-overrides.json  researchops_config_v1.0.0.json
data/: code-applications.csv  codes.csv  communications-log.csv  discussion-guides.csv  journal-entries.csv  journal-excerpts.csv  memos.csv  mural-boards.csv  partials.csv  participants.csv  project-details.csv  project-studies.csv  projects.csv  session-notes.csv  sessions.csv
features/: authenticated-walkthrough.feature  smoke.feature
infra/: seed-d1-worker.js
lib/: marked.min.js
playwright-report/: index.html
public/: _headers  _redirects  _worker.js  clear.html  consent.html  index.html  minimal-demo.html  notes.html  project-dashboard.html  projects.html  search.html  sessions.html  start.html  study.html  synthesis.html
reports-site/: index.html  manifest.json  wrangler.toml
schemas/: agent-trace-event.schema.json
scripts/: apply-reporting-review-repetition-pass.mjs  auth-runtime-bootstrap.mjs  finalise-reporting-review-repetition-pass.mjs  merge-cucumber-report.mjs  performance-audit.mjs  performance-audit.sh  release-provenance.mjs  render-reporting-review-site.mjs  reporting-review-evidence.mjs  reporting-review-model.mjs  researchops-home-acceptance.mjs  researchops-projects-acceptance.mjs  researchops-start-acceptance.mjs  researchops-state-acceptance.mjs  restructure-pages.njs  security-audit-policy.mjs  security-audit-policy.sh  sync-report-acceptance-criteria.mjs  validate-reports-site.mjs  validate-runtime-and-route-state.mjs  validate-sourcebook-links.mjs  validate.sh  visual-walkthrough-mobile.mjs  visual-walkthrough.mjs  walkthrough-playwright.mjs
sourcebook/: sourcebook-index.json  sourcebook-route-mappings.json
test-results/: .last-run.json
tests/: agent-gateway-capability-layer-contract.test.js  agent-gateway-capability-layer.test.js  agent-operating-model-regression.test.js  agent-trace-control-regression.test.js  agent-trace-control.test.js  agent-trace-coverage.test.js  agent-trace-promotion.test.js  ai-rewrite-ai-fallback.test.js  ai-rewrite-auth-feedback.test.js  (+149 more)
(+2302 files in other folders)
