[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "example-backend-seed-fixture"
version = "0.1.0"
description = "Python project signal for the multi-language repository seed fixture."
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.github-diamond-fixture]
fixture_kind = "repository_seed"
expected_detection = ["node", "python"]
expected_mode = "repo-instantiate"
intentionally_missing = [
  ".github/workflows/ci-node.yml",
  ".github/workflows/ci-python.yml",
  ".github/CODEOWNERS",
  "github-settings.yaml",
  "conformance-matrix.yaml",
  "gap-register.yaml",
  "agent-evidence.yaml"
]
